# ninja-sbom-extract

./: Cargo.lock.license  Cargo.toml  README.md
.reuse/: dep5
src/: deps_file.rs  main.rs  query_result.rs
