# SPDX-FileCopyrightText: 2022-2023, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
name = "ninja-sbom-extract"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
# spdx = "0.10.0"
# spdx-expression = "0.5.2"
typed-index-collections = "3.1.0"
derive_more = "0.99"
spdx-rs = "0.5.2"
petgraph = "0.6.3"
indexmap = "1.9"
anyhow = "1.0.69"
